add some updatas
添加了站点的管理